# CppProjects

./: .gitignore  README.md
time/2017-03-31_0000_StdPlusLib/StdPlusLib/: README.md
time/2017-06-14_0000_SimpleChatApp/SimpleChatApp/: CMakeLists.txt  README.md  cmake_build.cmd
time/2017-06-14_0000_SimpleChatApp/SimpleChatApp/src/: ClientMain.cpp  ServerMain.cpp
time/2017-06-14_0000_SimpleChatApp/SimpleChatApp/src/Client/: ClientCore.cpp  ClientCore.h  NetworkMap.cpp  NetworkMap.h
time/2017-06-14_0000_SimpleChatApp/SimpleChatApp/src/Net/: ISocket.h  ISocketFactory.h  ISocketStream.hpp
time/2017-06-14_0000_SimpleChatApp/SimpleChatApp/src/RealSocket/: RealSocket.cpp  RealSocket.h  RealSocketFactory.cpp  SupportFunctions.hpp  realsocketfactory.h
time/2017-06-14_0000_SimpleChatApp/SimpleChatApp/src/Server/: Server.cpp  Server.h
time/2017-06-14_0000_SimpleChatApp/SimpleChatApp/src/User/: User.cpp  User.h
time/2019-01-26_0000_PingPongGame/PingPongGame/: .gitignore  README.md
time/2019-01-26_0000_PingPongGame/PingPongGame/doc/: Ping Pong Game UML.drawio  architectural solutions.txt
time/2019-01-26_0000_PingPongGame/PingPongGame/msvc/: ping-pong-game.sln  ping-pong-game.sln.DotSettings  ping-pong-game.vcxproj  ping-pong-game.vcxproj.filters
time/2019-01-26_0000_PingPongGame/PingPongGame/resources/: settings.txt
time/2021-12-30_1300_SDLGame/Dependencies/: readme.md
time/2021-12-30_1300_SDLGame/SDLGame/: .gitignore  SDLGame.cpp  SDLGame.sln  SDLGame.sln.DotSettings  SDLGame.vcxproj  SDLGame.vcxproj.filters  SDLGameUML.drawio  pack_to_achive.cmd  readme.md  test.xml
(+145 files in other folders)
